Trying to clean up.

--- a/ebook/README.ipynb
+++ b/ebook/README.ipynb
@@ -14,45 +14,9 @@
     "  * conda -- package manager and configuration environment for Python\n",
     "  * jupyter lab -- literate programming environment that mixes code and markdown\n",
     "  * github -- cloud-based repository management for sharing stuff\n",
+    "  * and then many others.\n",
     "\n",
-    "To get here, we need to do the following:\n",
-    "\n",
-    "1. Install python: \n",
-    "  - For windows, I recommend using WSL (Windows Systems for Linux). I am running Ubuntu 20.04.2 LTS which comes with Python 3.8\n",
-    "  - For MacOSX, \n",
-    "  \n",
-    "2. Install conda:\n",
-    "  - Anaconda prefers that you download an installer from https://www.anaconda.com/products/individual\n",
-    "  - If you are using WSL, you need to download and run the Ubuntu installer\n",
-    "\n",
-    "3. Create and activate a conda virtual environment\n",
-    "```\n",
-    "conda create -n pp\n",
-    "conda activate pp\n",
-    "```\n",
-    "<br>\n",
-    "\n",
-    "4. Install the python packages\n",
-    "```\n",
-    "conda install numba scikit-learn scikit-image jupyterlab pip matplotlib\n",
-    "```\n",
-    "<br>\n",
-    "\n",
-    "\n",
-    "6. Clone the github repository and move into directory\n",
-    "```\n",
-    "git clone https://github.com/randalburns/pplectures2022.git\n",
-    "cd pplectures2022\n",
-    "```\n",
-    "<br>\n",
-    "\n",
-    "7. Run jupyter lab\n",
-    "```\n",
-    "jupyter lab\n",
-    "```\n",
-    "<br>\n",
-    "and launch this notebook.\n",
-    "\n"
+    "To get here, I have given you a Docker container.  Follow `environment/instructions` in the [PCDS repo]"
    ]
   },
   {
