--- a/ebook/activities/activity1.ipynb
+++ b/ebook/activities/activity1.ipynb
@@ -661,8 +661,7 @@
    "source": [
     "2. Use the batch size parameter to vary the number of tasks in each batch from 1,2,...128 @ n_jobs=4. You will need to look at the joblib documentation to read up about batch size.\n",
     "   1. Plot your results (use %timeit -o to capture output)\n",
-    "   2. Model the problem as having two performance components: a fixed startup cost per batch ($C_B$) and perfect parallelism.  Estimate the batch startup cost (give a range).\n",
-    "   3. Your answer to the batch startup costs should be noisy, i.e. there is not a consistent estimate for startup costs across all batch sizes. This indicates that a fixed startup cost per batch is not a good model. Consider other startup costs, such as skew, interference, and startup costs (per job). What do you think is a reasonable explanation for the inefficiency? What factors are possible?  Which factors can you eliminate?"
+    "   2. Model the problem as having two performance components: a fixed startup cost per batch ($C_B$) and perfect parallelism.  Estimate the batch startup cost."
    ]
   },
   {
@@ -710,11 +709,7 @@
    "id": "57b3cb77-8d34-4eab-bc1a-09fd8266a07f",
    "metadata": {},
    "source": [
-    "3. Run the job with `prefer='threads'` and `prefer='processes'`. Given that `LinearRegression.fit()`. You do not need to vary batch size for this part.\n",
-    "    1. Which is more efficient?  Why? Consider our discussion of parallel threads in python.\n",
-    "    2. Can you conclude that `LinearRegression.fit()` does or does not release the GIL? Explain.\n",
-    "\n",
-    "_Note_: you can verify this conclusion by calling `LinearRegression.fit()` directly, rather than calling the wrapper functions `r_sq_regression`."
+    "3. Run the job with `prefer='threads'` and `prefer='processes'`. Given that `LinearRegression.fit()`. You do not need to vary batch size for this part. Which is more efficient?  Why? Consider our discussion of parallel threads in python."
    ]
   },
   {
