--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Outline\n",
     "\n",
-    "#### [Introduction](./nbconcepts/00_intro.ipynb) (TODO rewrite)\n",
+    "#### [Introduction](./concepts/00_intro.ipynb)\n",
     "* Parallelism\n",
     "* Concurrency versus Parallelism\n",
     "\n",
