Update for Aug 30 lecture.

--- a/ebook/concepts/00_intro.ipynb
+++ b/ebook/concepts/00_intro.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "The  computer science curriculum often fails to adequately address parallelism. \n",
     "\n",
-    "* The 'discipline' of CS has been built on serial algorithm anbd machine models\n",
+    "* The 'discipline' of CS has been built on serial algorithm and machine models\n",
     "    * Computational complexity counts serial instructions\n",
     "    * (Most) Programming languages express one instruction after another\n",
     "    * Systems and archiecture build on the Von Neumann machine.\n",
