Updates for Sep. 06

--- a/ebook/activities/activity1.ipynb
+++ b/ebook/activities/activity1.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Run this on a machine that has at least 4 cores. Typically this is your laptop. The ugrad machines are also OK. Google Colab is not adequate. Fill out the requested cells toward the bottom of the notebook.\n",
     "\n",
-    "**Due date**: September 16 1, 2022, 5:00 pm EDT.\n",
+    "**Due date**: Tuesday September 12, 2022, 9:00 pm EDT.\n",
     "\n",
     "**Instructions for Submission**: Submit via Gradescope.\n",
     "\n",
