--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -11,15 +11,13 @@
     "* Parallelism\n",
     "* Concurrency versus Parallelism\n",
     "\n",
-    "#### [Tool 1: Parallel and Compiled Python](./examples/01_joblib.ipynb)  \n",
+    "#### [Tool 1: Parallel Python](./examples/01_joblib.ipynb)  \n",
     "* A First Program\n",
     "* Python parallel processes\n",
-    "* Interpreted Languages\n",
-    "    * The GIL\n",
-    "* Compilation and just-in-time compilation\n",
-    "    * Numba\n",
-    "    \n",
-    "#### Concept 1: [Strong Scaling](./nbconcepts/01_strong_scaling.ipynb)\n",
+    "* Concurrency versus parallelism\n",
+    "* The Global Interpreter Lock and python threads\n",
+    "\n",
+    "#### Concept 1: [Strong Scaling](./concepts/01_strong_scaling.ipynb)\n",
     "* Amdahls Law\n",
     "* Speedup\n",
     "* Parallel Efficiency\n",
@@ -146,7 +144,9 @@
    "source": [
     "#### Concepts that didn't make it yet\n",
     "\n",
-    "Simultaneous multithreading"
+    "Simultaneous multithreading\n",
+    "\n",
+    "### What happened to numba?"
    ]
   }
  ],
