Update for amdahl number removal.

--- a/ebook/README.ipynb
+++ b/ebook/README.ipynb
@@ -20,9 +20,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bdc508e-ceab-4da8-bd71-9b3b4486834e",
+   "metadata": {},
+   "source": [
+    "## RB notes\n",
+    "\n",
+    "RB don't do reducers. Don't do loop.\n",
+    "RB must put caching first.\n",
+    "RB do OpenMP loops and reduction as syntax later.\n",
+    "RB loop fusion.  And dynamic scheduling. And loops.\n",
+    "\n",
+    "You shoud never do vectorization unless you know it hasn't been done.\n",
+    "\n",
+    "Mon 18 \n",
+    "Weds 20 -- Cilk\n",
+    "Mon 25 -- OpenMP\n",
+    "Weds 27 -- ILP\n",
+    "Mon Oct 2 -- vector\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85ae039c-13bb-4325-8eb6-3fceee098343",
+   "id": "f6d39c46-c9c1-47de-957e-5eff7eba25c3",
    "metadata": {},
    "outputs": [],
    "source": []
