--- a/ebook/activities/activity1.ipynb
+++ b/ebook/activities/activity1.ipynb
@@ -709,7 +709,7 @@
    "id": "57b3cb77-8d34-4eab-bc1a-09fd8266a07f",
    "metadata": {},
    "source": [
-    "3. Run the job with `prefer='threads'` and `prefer='processes'`. Given that `LinearRegression.fit()`. You do not need to vary batch size for this part. Which is more efficient?  Why? Consider our discussion of parallel threads in python."
+    "3. Run the job with `prefer='threads'` and `prefer='processes'`. You do not need to vary batch size for this part. Which is more efficient?  Why? Consider our discussion of parallel threads in python."
    ]
   },
   {
