--- a/ebook/examples/01_joblib.ipynb
+++ b/ebook/examples/01_joblib.ipynb
@@ -405,12 +405,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "4ee0c890-03e8-434d-a59b-9a34f912ec97",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "from random import random\n",
     "\n",
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "e7319494-10fd-4396-a787-78a07610f815",
    "metadata": {
     "tags": []
@@ -433,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "336 ms ± 1.38 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "346 ms ± 6.47 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -445,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "5cc4ad1c-a8ac-4ce4-87b7-5bd9bffe47aa",
    "metadata": {
     "tags": []
@@ -455,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "338 ms ± 21 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "346 ms ± 41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -478,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "75695452-e337-4831-9b78-4050df52d2f8",
    "metadata": {
     "tags": []
@@ -488,7 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77.3 ms ± 3.73 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "76.7 ms ± 3.89 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
