--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -7,27 +7,28 @@
    "source": [
     "## Outline\n",
     "\n",
-    "#### [Introduction](./concepts/00_intro.ipynb)\n",
+    "#### [Introduction](./concepts/00_intro.ipynb) (Aug 30)\n",
     "* Parallelism\n",
     "* Concurrency versus Parallelism\n",
     "\n",
-    "#### [Tool 1: Parallel Python](./examples/01_joblib.ipynb)  \n",
+    "#### Tool 1: [Parallel Python](./examples/01_joblib.ipynb)  (Aug 30)\n",
     "* A First Program\n",
     "* Python parallel processes\n",
     "* Concurrency versus parallelism\n",
     "* The Global Interpreter Lock and python threads\n",
     "\n",
-    "#### Concept 1: [Strong Scaling](./concepts/01_strong_scaling.ipynb)\n",
+    "#### Concept 1: [Strong Scaling](./concepts/01_strong_scaling.ipynb) (Sep. 6)\n",
     "* Amdahls Law\n",
     "* Speedup\n",
     "* Parallel Efficiency\n",
     "    \n",
-    "#### Concept 2: [CPU Parallelism: Multicore](./nbconcepts/02_moores_multicore.ipynb)\n",
+    "#### Concept 2: [CPU Parallelism: Multicore](./concepts/02_moores_multicore.ipynb) (Sep. 11)\n",
     "* What is a CPU? (evolution of CPUs, motivation for parallelism, Moore's Law)\n",
     "* Multicore\n",
     "    * Shared-memory\n",
+    "    \n",
     "        \n",
-    "####  Tool 2: OpenMP (https://hpc-tutorials.llnl.gov/openmp/)\n",
+    "####  Tool 2: OpenMP (https://hpc-tutorials.llnl.gov/openmp/) (Sep. 11)\n",
     "* What is OpenMP (parallel C/Fortran on multicore, shared-memory architectures)\n",
     "* Serial to Parallel Refactoring\n",
     "* System overview\n",
@@ -39,9 +40,19 @@
     "    * Interacting with the environment\n",
     "        * openmp library calls\n",
     "        * (box) querying your processor\n",
+    "\n",
+    "#### Concept 3: [Memory Hierarchy]     (Sep 13)\n",
+    "    * Latencies\n",
+    "    * Cache coherency\n",
+    "    * Row versus column order\n",
+    "    * LM Bench\n",
+    "\n",
+    "####  Tool 3: Cilk  (Sep. 18)\n",
     "    * fork/join parallelism\n",
+    "    * loop parallelism\n",
+    "    * work stealing and scheduling\n",
     "    \n",
-    "#### Concept 3: [Factors Against Parallelism](nbconcepts/03_factors.ipynb)\n",
+    "#### Concept 3: [Factors Against Parallelism](nbconcepts/03_factors.ipynb) (Sep 15)\n",
     "* Interference\n",
     "* Skew\n",
     "* Startup costs\n",
@@ -57,10 +68,6 @@
     "    * Skew and dynamic scheduling (TODO)\n",
     "    \n",
     "#### Concept 5: Cache Hierarchy\n",
-    "    * Row versus column order\n",
-    "    * LM Bench\n",
-    "    * memory efficiency TODO\n",
-    "    * memory tool TODO\n",
     "    \n",
     "#### Concept 6: CPU Parallelism: ILP\n",
     "    * ILP\n",
