--- a/ebook/README.ipynb
+++ b/ebook/README.ipynb
@@ -41,9 +41,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f160dc5d-e43f-4b19-9d92-5ed890775fdf",
+   "metadata": {},
+   "source": [
+    "Got rid of NUMA is OMP lecture."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6d39c46-c9c1-47de-957e-5eff7eba25c3",
+   "id": "32b10b58-c22c-4b40-a219-968cda16396d",
    "metadata": {},
    "outputs": [],
    "source": []
