--- a/ebook/activities/activity1.ipynb
+++ b/ebook/activities/activity1.ipynb
@@ -622,7 +622,7 @@
     "1. Use `joblib.Parallel` and `joblib.delayed` to parallelize the computation of the calls to `r_sq_regression`. \n",
     "    1. In one cell, print the answer to verify that your parallel program is correct.\n",
     "    2. In another cell time the computation. What is the speedup at `n_jobs=4`?\n",
-    "    3. Estimate the Amdahl number for this computation. Show your work."
+    "    3. Estimate the optimized fraction of the code ($p) for this computation. Show your work."
    ]
   },
   {
