--- a/ebook/concepts/01_strong_scaling.ipynb
+++ b/ebook/concepts/01_strong_scaling.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1832c50b-b187-443c-9dab-b04e450bcf03",
    "metadata": {
     "tags": []
@@ -171,7 +171,7 @@
        "[64 rows x 2 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c91d3e31-bca8-4b0c-94f0-6b196df14c34",
    "metadata": {
     "tags": []
@@ -406,22 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "16ac8d23-94be-4748-9727-4196793d2c93",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# we measure perforamnce as a function of processors. \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m processors \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m16\u001b[39m,\u001b[38;5;241m32\u001b[39m])\n\u001b[1;32m      3\u001b[0m speedup \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1.85\u001b[39m, \u001b[38;5;241m3.30\u001b[39m, \u001b[38;5;241m5.34\u001b[39m, \u001b[38;5;241m7.4\u001b[39m, \u001b[38;5;241m9.4\u001b[39m])\n\u001b[1;32m      4\u001b[0m p_frac \u001b[38;5;241m=\u001b[39m processors\u001b[38;5;241m/\u001b[39m(processors\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39mspeedup)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0.91891892, 0.92929293, 0.92883895, 0.92252252, 0.92244338])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "293f4388-9c62-4024-9438-d11bcd005a82",
    "metadata": {
     "tags": []
@@ -458,7 +457,7 @@
        "12.500000000000007"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ebb062c2-a148-428b-af3b-07d92ae2ff0a",
    "metadata": {
     "tags": []
@@ -574,6 +573,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e0c0b6ff-4828-4802-8962-dc9818135e98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34cb65e0-1a9e-48b6-8c29-be3a93bb8779",
    "metadata": {},
    "outputs": [],
    "source": []
