--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -27,8 +27,7 @@
     "* Multicore\n",
     "    * Shared-memory\n",
     "    \n",
-    "        \n",
-    "####  Tool 2: OpenMP (https://hpc-tutorials.llnl.gov/openmp/) (Sep. 11)\n",
+    "####  Tool 2: [OpenMP](./examples/02_open_mp.ipynb) (Sep. 11)\n",
     "* What is OpenMP (parallel C/Fortran on multicore, shared-memory architectures)\n",
     "* Serial to Parallel Refactoring\n",
     "* System overview\n",
@@ -38,8 +37,7 @@
     "* Example #parallel directive\n",
     "    * Blocks and scoping\n",
     "    * Interacting with the environment\n",
-    "        * openmp library calls\n",
-    "        * (box) querying your processor\n",
+    "* Reference Materials: (https://hpc-tutorials.llnl.gov/openmp/\n",
     "\n",
     "#### Concept 3: [Memory Hierarchy]     (Sep 13)\n",
     "    * Latencies\n",
