Final push for lecture 9/11.

--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -39,11 +39,11 @@
     "    * Interacting with the environment\n",
     "* Reference Materials: (https://hpc-tutorials.llnl.gov/openmp/\n",
     "\n",
-    "#### Concept 3: [Memory Hierarchy]     (Sep 13)\n",
-    "    * Latencies\n",
-    "    * Cache coherency\n",
-    "    * Row versus column order\n",
-    "    * LM Bench\n",
+    "#### Concept 3: [Memory Hierarchy](./concepts/memory_hierarchy.ipynb) (Sep 13)\n",
+    "* Latencies\n",
+    "* Cache coherency\n",
+    "* Row versus column order\n",
+    "* LM Bench\n",
     "\n",
     "####  Tool 3: Cilk  (Sep. 18)\n",
     "    * fork/join parallelism\n",
