Commit on main post lecture. Check block.c

--- a/ebook/concepts/05_cache_hierarchy.ipynb
+++ b/ebook/concepts/05_cache_hierarchy.ipynb
@@ -10,14 +10,16 @@
     "  * looks to processor like a 1-d adress space of data locations\n",
     "  * uniform access from all cores/processors\n",
     "*  Actually a steep, hieararchy of cache in which different levels have different:\n",
-    "  * Performance\n",
-    "  * Capacity\n",
-    "  * Sharing\n",
+    "    * Performance\n",
+    "    * Capacity\n",
+    "    * Sharing\n",
     "  \n",
-    "<img src=\"https://sites.google.com/site/cachememory2011/_/rsrc/1311628836036/memory-hierarchy/hei.png\" width=512 title=\"Cache Hierarchy\" />\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*42rOo-Rl8seCDV5cZafUNA.png\" width=512 title=\"Cache Hierarchy\" />\n",
+    "\n",
+    "Image from https://3000rain.medium.com/memory-hierarchy-afb83b61558c\n",
     "\n",
     "* Caches are a place to store a smaller amount of data the is frequently/recently used to make data access faster.\n",
-    "  * Processor caches (on chip) cache for memory.  Managed by hardware.\n",
+    "  * Processor caches (on chip) is a cache for memory.  Managed by hardware.\n",
     "  * Memory (DRAM) is a cache for pages from disk.  Managed by a storage system (database, file system).\n",
     "  * Management refers to the process of loading and evicting the contents in response to workload.\n",
     "  \n",
@@ -29,7 +31,7 @@
     "\n",
     "### Latency\n",
     "\n",
-    "Delays (in clock cycles) to different levels in the cache hierarchy for an i7 (Nehalem)\n",
+    "Delays (in clock cycles) to different levels in the cache hierarchy for an i7 (Nehalem, 2008).\n",
     " * $1$ cycle to registers (private to each core)\n",
     " * $1$ cycle to L1 (private to each core)\n",
     " * $4$ cycles to L2 (private to each core)\n",
@@ -99,28 +101,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Memory Access Patterns in OpenMP\n",
     "\n",
-    "* To be efficient, memory access should be __sequential__ and __aligned__\n",
-    "  * Sequential = in memory address order\n",
-    "  * Aligned = to physical boundaries in HW. Cache lines, memory pages.\n",
-    "  \n",
-    "<img src=\"https://cvw.cac.cornell.edu/gpu/images/figure8.png\" width=512 />\n",
-    "\n",
-    "This is a picture from a Cornell workshop, but it makes the point.\n",
-    "\n",
-    "* To accomplish this in looping programs\n",
+    "* For good memory performance in looping programs\n",
     "  * choose an iteration order that is sequential in memory\n",
-    "  * allocate data aligned (or hope it happens because alignment interfaces are not portable)\n",
+    "  * align data\n",
+    "      * use addresses that are 0 modulo 128 or 256\n",
+    "      * assume that large memory allocations are sequential\n",
+    "      * there are specific interfaces to allocate aligned memory (not portable)\n",
+    "      \n",
+    "      \n",
+    "#### Row versus Column order\n",
+    "\n",
     "* Nested loops are a good example\n",
     "  * Row versus column order can make a big difference.\n",
     "  * Think of memory as reading a sequential cache line at a time\n",
-    "\n",
     "  \n",
-    "<img src=\"./images/rowvcol.png\" width=512 title=\"http://akira.ruc.dk/~keld/teaching/IPDC_f10/Slides/pdf4x/4_Performance.4x.pdf\" />\n",
+    "<img src=\"../images/rowvcol.png\" width=512 title=\"http://akira.ruc.dk/~keld/teaching/IPDC_f10/Slides/pdf4x/4_Performance.4x.pdf\" />\n",
     "\n",
     "* Reading data a row at a time results in sequential access of all elements.  \n",
-    "* Reading successive elements in a column results in strided I/O."
+    "* Reading successive elements in a column results in strided I/O.\n",
+    "\n",
+    "Describing programming conventions and trickiness.\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Row_and_column_major_order.svg/800px-Row_and_column_major_order.svg.png\" title=\"Row-major versus column-major\" />"
    ]
   },
   {
