--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -37,20 +37,21 @@
     "* Example #parallel directive\n",
     "    * Blocks and scoping\n",
     "    * Interacting with the environment\n",
-    "* Reference Materials: (https://hpc-tutorials.llnl.gov/openmp/\n",
+    "* Reference Materials : https://hpc-tutorials.llnl.gov/openmp/\n",
     "\n",
     "#### Concept 3: [Memory Hierarchy](./concepts/memory_hierarchy.ipynb) (Sep 13)\n",
     "* Latencies\n",
     "* Cache coherency\n",
     "* Row versus column order\n",
     "* LM Bench\n",
+    "* **Read**: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
     "\n",
-    "####  Tool 3: Cilk  (Sep. 18)\n",
+    "####  Tool 3: Cilk  (Sep. 15)\n",
     "    * fork/join parallelism\n",
     "    * loop parallelism\n",
     "    * work stealing and scheduling\n",
     "    \n",
-    "#### Concept 3: [Factors Against Parallelism](nbconcepts/03_factors.ipynb) (Sep 15)\n",
+    "#### Concept 3: [Factors Against Parallelism](nbconcepts/03_factors.ipynb) (Sep 18)\n",
     "* Interference\n",
     "* Skew\n",
     "* Startup costs\n",
