Update for lecture.

--- a/ebook/README.ipynb
+++ b/ebook/README.ipynb
@@ -49,9 +49,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1d03d8e-3f95-4e30-bb59-26638e571961",
+   "metadata": {},
+   "source": [
+    "ask about work and span in openmp hw."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b10b58-c22c-4b40-a219-968cda16396d",
+   "id": "c70083e9-fa6d-4298-89e4-d9d34e315bbe",
    "metadata": {},
    "outputs": [],
    "source": []
