--- a/ebook/concepts/05_cache_hierarchy.ipynb
+++ b/ebook/concepts/05_cache_hierarchy.ipynb
@@ -9,7 +9,7 @@
     "* Memory is an abstraction\n",
     "  * looks to processor like a 1-d adress space of data locations\n",
     "  * uniform access from all cores/processors\n",
-    "*  Actually a steep, hieararchy of cache in which different levels have different:\n",
+    "*  Actually a steep, hierarchy of cache in which different levels have different:\n",
     "    * Performance\n",
     "    * Capacity\n",
     "    * Sharing\n",
@@ -18,7 +18,7 @@
     "\n",
     "Image from https://3000rain.medium.com/memory-hierarchy-afb83b61558c\n",
     "\n",
-    "* Caches are a place to store a smaller amount of data the is frequently/recently used to make data access faster.\n",
+    "* Caches are a place to store a smaller amount of data that is frequently/recently used to make data access faster.\n",
     "  * Processor caches (on chip) is a cache for memory.  Managed by hardware.\n",
     "  * Memory (DRAM) is a cache for pages from disk.  Managed by a storage system (database, file system).\n",
     "  * Management refers to the process of loading and evicting the contents in response to workload.\n",
@@ -40,17 +40,20 @@
     " * $10^5$ cycles to NVRAM\n",
     " * $10^7$ cycles to magnetic disk\n",
     "\n",
-    "_Data Loading_: New data that has not been used yet must come from SSD or disk.  Can be very slow.\n",
+    "_Data Loading_: New data that has not been used must be loaded from SSD, disk, or memory.\n",
     "\n",
     "_Data Sharing_: When two threads need to share data, they incur the cost of transferring data through the fastest shared cache.\n",
     "  * 2 cores on the same processor take 70 cycles (35 to write to L3 and 35 to read from L3)\n",
     "  * 2 processors take 290 cycles\n",
     "  \n",
-    "The following figure is almost right. SMP should really say something like QPI (quickpath interconnect) or somesuch. It's not an SMP (symmetric multiprocessor). However, it is useful to visualize sharing betweeen cores in L2 and processors in L3.\n",
+    "The following figure is almost right. SMP should really say something like QPI (quickpath interconnect). It is helpful to visualize sharing betweeen cores in L2 and processors in L3.\n",
     "\n",
     "<img src=\"https://www.enterpriseai.news/wp-content/uploads/2014/06/shared-memory-cluster-story-1-processor-cluster.jpg\" width=512 title=\"NUMA schematic from EnterpriseAI\" />\n",
     "\n",
-    "This sharing result in _interference_ between processes that share data in OpenMP and threads.  This is the major source for lost parallelism in these programming models.\n",
+    "This sharing results in _interference_ between processes that share data in OpenMP and threads.  This is the major source for lost parallelism in these programming models.\n",
+    "\n",
+    "\n",
+    "**Cache examples on blackboard.**\n",
     "\n"
    ]
   },
@@ -64,8 +67,8 @@
     "get data, you get many words of data.  To get good memory throughput, you must \n",
     "use all that data.  Most important to understanding cache performance are:\n",
     "* __cache line__: data are moved among levels in the cache one line at a time\n",
-    "  * as small as 64 bytes (L1 or L2)\n",
-    "  * think of each load as the parallel load of an entire line\n",
+    "  * 128 bytes is a typical value for L1 or L2\n",
+    "  * each access is a parallel load of an entire line\n",
     "  * good parallel programs will use 64 or 128 bytes\n",
     "* __unified__: refers to whether or not the cache is shared (among cores or processors)\n",
     "\n",
@@ -74,7 +77,7 @@
     "  * __inclusive__: data in higher level caches are also in lower level caches\n",
     "  * __exclusive__: data in higher level caches are not in lower level caches\n",
     "* __associativity__: the number of hardware locations that a cache line can go into\n",
-    "  * important for HW design.  We typically don't care until we get to CUDA."
+    "  * important for HW design.  We typically don't care."
    ]
   },
   {
@@ -84,7 +87,7 @@
     "### So What\n",
     "\n",
     "* You can’t just access memory\n",
-    "  * Different memory access patterns result in 50x performance differences for the same computation\n",
+    "  * Different memory access patterns result in large performance differences for the same computation\n",
     "* Worry about:\n",
     "  * Parallelism: am I using all the data in a cache line\n",
     "    * To access a single byte, one must load a whole line\n",
@@ -101,7 +104,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "* For good memory performance in looping programs\n",
     "  * choose an iteration order that is sequential in memory\n",
     "  * align data\n",
@@ -110,7 +112,9 @@
     "      * there are specific interfaces to allocate aligned memory (not portable)\n",
     "      \n",
     "      \n",
-    "#### Row versus Column order\n",
+    "#### Row versus Column Example\n",
+    "\n",
+    "Refer to [row_column.c](../examples/omp_stencil/row_column.c)\n",
     "\n",
     "* Nested loops are a good example\n",
     "  * Row versus column order can make a big difference.\n",
@@ -120,10 +124,46 @@
     "\n",
     "* Reading data a row at a time results in sequential access of all elements.  \n",
     "* Reading successive elements in a column results in strided I/O.\n",
+    "    * One element accessed for every column's worth of data.\n",
+    "    \n",
+    "    \n",
+    "We will consider the following two snippets. In the first snippet, $x$ varies fastest. One element of data are access for every $DIM$ elements.\n",
+    "    \n",
+    "```\n",
+    "    for (int y=0; y<DIM; y++) {\n",
+    "        for (int x=0; x<DIM; x++) {\n",
+    "            array[x*DIM+y] = (double)rand()/RAND_MAX;\n",
+    "        }        \n",
+    "    }\n",
+    "```\n",
     "\n",
-    "Describing programming conventions and trickiness.\n",
+    "In this example $y$ is the inside loop and varies fastest. Elements are accessed sequentially in memory\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Row_and_column_major_order.svg/800px-Row_and_column_major_order.svg.png\" title=\"Row-major versus column-major\" />"
+    "```\n",
+    "    for (int x=0; x<DIM; x++) {\n",
+    "        for (int y=0; y<DIM; y++) {\n",
+    "            array[x*DIM+y] = (double)rand()/RAND_MAX;\n",
+    "        }        \n",
+    "    }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 2-d array conventions and programming languages\n",
+    " \n",
+    "Programming languages that use 2-d array indexing use one of two conventions to serialize array elements to memory.\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Row_and_column_major_order.svg/800px-Row_and_column_major_order.svg.png\" width=256 title=\"Row-major versus column-major\" />\n",
+    "\n",
+    "* Row major systems include python, C++.\n",
+    "* Colum major systems include R, Fortran, and image formats.\n",
+    "\n",
+    "You must be careful when using 2-d indexing.  Class thought exercise. _Write a embedded for loop for python that accesses elements `ar[row][col]` in sequential order._\n"
    ]
   },
   {
@@ -136,11 +176,6 @@
     "\n",
     "> Access a single byte at 128 byte strides (i.e. 0, 128, 256, 384, ...) for an array of a specified size.  Loop over the array multiple times to amortize any initial load costs.\n",
     "\n",
-    "Plotting the per access latency versus the array size reveals the structure of the cache. A blog about the Alibaba Cloud shows a simple to interpret chart:\n",
-    "\n",
-    "<img \n",
-    "     src=\"https://yqintl.alicdn.com/83b8b62fadc0921e4f516e161f254173913aa779.png\" width=768 title=\"AliBaba Cloud Memory Performance (from: https://www.alibabacloud.com/blog/understanding-memory-performance_594708)\" />\n",
-    "\n",
     "For arrays that fit into:\n",
     "  * L1 cache: the L1 cache that contains the entire array and each byte can be accessed in a single clock cycle\n",
     "  * L2 cache but not L1 cache: every byte access transfers a line from the L2 cache to the L1 cache. (Lines are 128 bytes). Each access occurs at L2 latency\n",
@@ -148,7 +183,7 @@
     "  * Larger than L3: performance increases as a function of the working set size. The operating system manages this cache and has access to predictive prefetching and other optimizations.\n",
     "    \n",
     "__Conclusion__: the exact same code at different sizes can have >20x performance differences.\n",
-    "  * you have to understand the cache hierarchy and reason about where your code runs to write fast code.\n",
+    "  * you have to understand the cache hierarchy and reason about memory access patterns\n",
     "    "
    ]
   },
@@ -160,9 +195,7 @@
     "\n",
     "<img src=\"https://sites.utexas.edu/jdm4372/files/2012/03/RangerLatencyChart.jpg\" width=768 title=\"Ranger Memory Performance at TACC\" />\n",
     "\n",
-    "For reads that are bigger than L3, there is different performance depending upon on which physical memory the array resides. This is a direct measure of the non-uniformity of memory.\n",
-    "\n",
-    "__Conclusion__: NUMA matters."
+    "For reads that are bigger than L3, there is varying performance depending in multi-processor systems. We will cover this later in a section on __NUMA__=non-uniform memory access."
    ]
   }
  ],
