--- a/ebook/01_joblib.ipynb
+++ b/ebook/01_joblib.ipynb
@@ -5,7 +5,7 @@
    "id": "0171f7d2-7bb8-4b34-abd2-8da539a26eb1",
    "metadata": {},
    "source": [
-    "## Tool 1: JobLib: A First Parallel Program\n",
+    "## JobLib: A First Parallel Program\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "    This example is derived from Chapter 1 of Mattson, <i>Parallel Computing for Data Science</i>. The example in that chapter has been reimplemented in Python and the content and tone do not follow Mattson exactly.\n",
