--- a/ebook/07_openmp_loops.ipynb
+++ b/ebook/07_openmp_loops.ipynb
@@ -4,12 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example OMP_Stencial: Loop Optimization in OpenMP\n",
+    "## Loop Optimizations in OpenMP\n",
     "\n",
     "This example is almost all by example in file [omp_stencil.c](./omp_stencil/stencil.c). This produces the timing results that show the performance benefits. Run this code without compiler optimization\n",
     "```\n",
     "gcc -fopenmp -O0 stencil.c \n",
-    "clang -fopenmp -O0 stencil.c\n",
     "```\n",
     "\n",
     "This makes the results more understandable because it prevents the compiler from vectorizing the code and optimizing loops. If we run at a higher optimization level, the compiler will automatically make some of the optimizations that we want to demonstrate.\n",
@@ -18,62 +17,7 @@
     "\n",
     "**Goal**: Understanding how strided and sequential access influence performance and how this is related to cache-lines.\n",
     "\n",
-    "For 2-d dense data, the array must be serialized to memory, i.e. in a linear order.\n",
-    "The serialization strategies are named by which dimension (row versus column) \n",
-    "occurs sequentially in memory.\n",
-    "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/4d/Row_and_column_major_order.svg\" width=256 title=\"Row versus column major order.\" />\n",
-    "\n",
-    "Choosing a memory efficient order for loops has a big impact on performance.\n",
-    "  * Successive loop iterations access adjacent elements or\n",
-    "  * Successive loop iterations access strided elements, i.e. one element every spaced out by the other elements of a row or column.\n",
-    "  \n",
-    "The different orders are also associated with programming languages that use these conventions.\n",
-    "  \n",
-    "<img src=\"https://images.slideplayer.com/23/6540072/slides/slide_3.jpg\" width=512 title=\"from Edgar Gabriel at UH\" />\n",
-    "\n",
-    "C-Order is row major. Fortan order is column major. The colors indicate how the access patterns will be sequential or strided. Accessing succesive elements in a row (blue) is sequential in C-order and strided in Fortran-order.\n",
-    "\n",
-    "There are many conventions about loop ordering and they get confusing.  Reason carefully about how the loops variables are enumerated and the data layout.  For example, images are almost always in Fortran order so that programming then in C looks weird."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sequential access in `stencil.c`\n",
-    "\n",
-    "We provide two routines that show the difference between sequential and strided access in C.\n",
-    "\n",
-    "Which of the following performs sequential access?\n",
-    "\n",
-    "```c\n",
-    "void initializeyx ( double* array )\n",
-    "{\n",
-    "    /* Initialize the array to random values */\n",
-    "    for (int y=0; y<DIM; y++) {\n",
-    "        for (int x=0; x<DIM; x++) {\n",
-    "            array[x*DIM+y] = (double)rand()/RAND_MAX;\n",
-    "        }        \n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "void initializexy ( double* array )\n",
-    "{\n",
-    "    /* Initialize the array to random values */\n",
-    "    for (int x=0; x<DIM; x++) {\n",
-    "        for (int y=0; y<DIM; y++) {\n",
-    "            array[x*DIM+y] = (double)rand()/RAND_MAX;\n",
-    "        }        \n",
-    "    }\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "The performance difference reflects the latency difference between sequential and strided acceess. \n",
-    "\n",
-    "The way that I think about this is that:\n",
-    "  * when accessing data sequentially, every cache line fetch retrieves a 16 elements (for 128 byte cache lines)\n",
-    "  * when accessing data strided, every cache line fetch retrieves 1 element."
+    "_This was covered in the memory hierarcy lecture on Septembter 13._"
    ]
   },
   {
@@ -325,9 +269,7 @@
     "\n",
     "### Loop Fission\n",
     "\n",
-    "This optimization divides the work of a single loop into multiple loops. I have not built an example, because I can't find one that is natural and effective. Fission can be used to make the data references in a loop smaller so that it fits into a smaller cache.  It is important to know that this optimization exists. It is useful in rare circumstances.\n",
-    "\n",
-    "The _tiling_ optimizations for multiple dimensional arrays (**Lecture XX**) are a similar optimization to loop fusion."
+    "This optimization divides the work of a single loop into multiple loops. I have not built an example, because I can't find one that is natural and effective. Fission can be used to make the data references in a loop smaller so that it fits into a smaller cache.  It is important to know that this optimization exists. It is useful in rare circumstances."
    ]
   },
   {
@@ -396,22 +338,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Loop Scheduling\n",
-    "\n",
-    "This is really an aside. I just want you to know that it exists.\n",
-    "\n",
-    "The full looping directive includes the specification of a scheduling directive and a chunk size\n",
-    "```c\n",
-    "#pragma omp parallel for schedule(kind [,chunk size])\n",
-    "```\n",
-    "in which schedule can be one of:\n",
-    "* Static -- divide loop into equal sized chunks\n",
-    "* Dynamic -- build internal work queue and dispatch blocksize at a time\n",
-    "* Guided -- dynamic scheduling with decreasing block size for load balance\n",
-    "* Auto -- compiler chooses from above\n",
-    "* Runtime -- runtime configuration chooses from above\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
