--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -7,27 +7,27 @@
    "source": [
     "## Outline\n",
     "\n",
-    "#### [Introduction](./concepts/00_intro.ipynb) (Aug 30)\n",
+    "#### [Introduction](00_intro.ipynb) (Aug 30)\n",
     "* Parallelism\n",
     "* Concurrency versus Parallelism\n",
     "\n",
-    "#### Tool 1: [Parallel Python](./examples/01_joblib.ipynb)  (Aug 30)\n",
+    "#### [Parallel Python](01_joblib.ipynb)  (Aug 30)\n",
     "* A First Program\n",
     "* Python parallel processes\n",
     "* Concurrency versus parallelism\n",
     "* The Global Interpreter Lock and python threads\n",
     "\n",
-    "#### Concept 1: [Strong Scaling](./concepts/01_strong_scaling.ipynb) (Sep. 6)\n",
+    "#### [Strong Scaling](02_strong_scaling.ipynb) (Sep. 6)\n",
     "* Amdahls Law\n",
     "* Speedup\n",
     "* Parallel Efficiency\n",
     "    \n",
-    "#### Concept 2: [CPU Parallelism: Multicore](./concepts/02_moores_multicore.ipynb) (Sep. 11)\n",
+    "#### [CPU Parallelism: Multicore](03_moores_multicore.ipynb) (Sep. 11)\n",
     "* What is a CPU? (evolution of CPUs, motivation for parallelism, Moore's Law)\n",
     "* Multicore\n",
     "    * Shared-memory\n",
     "    \n",
-    "####  Tool 2: [OpenMP](./examples/02_open_mp.ipynb) (Sep. 11)\n",
+    "#### [OpenMP](04_open_mp.ipynb) (Sep. 11)\n",
     "* What is OpenMP (parallel C/Fortran on multicore, shared-memory architectures)\n",
     "* Serial to Parallel Refactoring\n",
     "* System overview\n",
@@ -39,36 +39,35 @@
     "    * Interacting with the environment\n",
     "* Reference Materials : https://hpc-tutorials.llnl.gov/openmp/\n",
     "\n",
-    "#### Concept 3: [Memory Hierarchy](./concepts/memory_hierarchy.ipynb) (Sep 13)\n",
+    "#### [Memory Hierarchy](05_cache_hierarchy.ipynb) (Sep 13)\n",
     "* Latencies\n",
     "* Cache coherency\n",
     "* Row versus column order\n",
     "* LM Bench\n",
     "* **Read**: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
     "\n",
-    "####  Tool 3: Cilk  (Sep. 15)\n",
+    "#### [Cilk](06_fork_join.ipynb)  (Sep. 15)\n",
     "* fork/join parallelism\n",
     "* loop parallelism\n",
     "* work stealing and scheduling\n",
+    "\n",
+    "#### [Loop Parallelism](07_openmp_loops.ipynb)\n",
+    "\n",
+    "* Scoping and thread local variables\n",
+    "* Loop dependencies\n",
+    "* Loop fusion\n",
+    "* Loop fission\n",
+    "* False sharing\n",
+    "* Reductions in OpenMP\n",
     "    \n",
-    "#### Concept 3: [Factors Against Parallelism](nbconcepts/03_factors.ipynb) (Sep 18)\n",
+    "#### [Factors Against Parallelism](08_factors.ipynb) (Sep 18)\n",
     "* Interference\n",
     "* Skew\n",
     "* Startup costs\n",
     "* Overlap\n",
     "* top/htop processor utilization\n",
-    "    \n",
-    "#### Concept 4: [Loop Parallelism](nbconcepts/04_loop_optimization.ipynb)\n",
-    "    * Chunks\n",
-    "    * Scoping and thread local variables\n",
-    "    * Loop dependencies\n",
-    "    * Loop fusion\n",
-    "    * Loop fission\n",
-    "    * Skew and dynamic scheduling (TODO)\n",
-    "    \n",
-    "#### Concept 5: Cache Hierarchy\n",
-    "    \n",
-    "#### Concept 6: CPU Parallelism: ILP\n",
+    "\n",
+    "#### CPU Parallelism: ILP\n",
     "    * ILP\n",
     "        * Pipelines \n",
     "        * Vectorization\n",
