--- a/ebook/activities/activity2.ipynb
+++ b/ebook/activities/activity2.ipynb
@@ -38,31 +38,34 @@
     "#### Programming\n",
     "\n",
     "\n",
-    "Complete the *TODO* instructions in [activity2/tokens_omp.cpp].\n",
+    "Complete the *TODO* instructions in [activities/tokens_omp.cpp].\n",
     "\n",
-    "Add `parallel for` directives to functions:\n",
-    " * `omp_countTokensElementsFirst`\n",
-    " * `omp_countTokensTokensFirst`\n",
-    " \n",
-    "Add `parallel for` and `reduction` directive for the array `token_counts` for:\n",
-    "  * `omp_countTokensElementsFirst_reduce`\n",
-    "  * `omp_countTokensTokensFirst_reduce`\n",
+    "1. Add `parallel for` directives to functions:\n",
+    "   * `omp_countTokensElementsFirst`\n",
+    "   * `omp_countTokensTokensFirst`\n",
+    "2. Add `parallel for` and `reduction` directive for the array `token_counts` for:\n",
+    "    * `omp_countTokensElementsFirst_reduce`\n",
+    "    * `omp_countTokensTokensFirst_reduce`\n",
     "  \n",
     "The array reduction clause was added to OpenMP and requires one to specify the length of the array.  A simple example is provided in https://dvalters.github.io/optimisation/code/2016/11/06/OpenMP-array_reduction.html.\n",
     "\n",
+    "3. Unroll the loop 8 times in `unroll_omp_countTokensElementsFirst_reduce`. You may assume the the tokens array is evenly divisible by 8.\n",
+    "\n",
     "On the `gradx.cs.jhu.edu` machine after I added this code, I got the timing results\n",
     "```\n",
-    "Tokens First time: 7.82809 seconds\n",
-    "Elements First time: 7.47596 seconds\n",
-    "OMP Tokens First time: 3.23214 seconds\n",
-    "OMP Elements First time: 1.87131 seconds\n",
-    "OMP Tokens First Reduce time: 2.06094 seconds\n",
-    "OMP Elements First Reduce time.: 1.74381 seconds\n",
+    "Tokens First time: 8.07097 seconds\n",
+    "Elements First time: 6.93468 seconds\n",
+    "OMP Tokens First time: 2.10465 seconds\n",
+    "OMP Elements First time: 1.78919 seconds\n",
+    "OMP Tokens First Reduce time: 1.99353 seconds\n",
+    "OMP Elements First Reduce time.: 1.78073 seconds\n",
+    "Unroll OMP Elements First Reduce time.: 0.926184 seconds\n",
     "```\n",
     "building with the command line\n",
     "```\n",
-    "g++ -fopenmp tokens_omp.cpp\n",
-    "```"
+    "g++ -O0 -fopenmp tokens_omp.cpp\n",
+    "```\n",
+    "Compiling with `-O0` turns off all compiler optimizations to prevent the compiler from making unknown optimizations that would confound our results."
    ]
   },
   {
@@ -72,6 +75,8 @@
    "source": [
     "#### Questions\n",
     "\n",
+    "Provide brief but complete answers to the following questions in the following cell.\n",
+    "\n",
     "1. Why is it more efficient to iterate over the `tokens` in the inner loop? \n",
     "(_Note_: Access to both arrays is sequential. This is a question of cache capacity and cache misses.)\n",
     "\n",
@@ -79,15 +84,23 @@
     "    1. Which function performs (unsafe) sharing in the tokens array?\n",
     "    2. Which function assigns different elements of the token array to different threads?\n",
     "    \n",
-    "(_Note_: This shows that it is safe to share read-only data (the `elements` array) and dangerous to share write data (the `tokens` array))\n",
-    "    \n",
-    "3. For the `omp` function that assigns different tokens to different threads, how does false sharing arise?  Draw a diagram (hand drawn and take a picture is fine. nothing fancy)"
+    "3. For the function that assigns different tokens to different threads, how does false sharing arise? Be specific about the memory access pattern or include a drawing.\n",
+    "\n",
+    "4. For the unrolled loop, why is it more efficient? What computations are avoided?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96e43b5-ba32-47e1-83e0-823b7651cc98",
+   "metadata": {},
+   "source": [
+    "#### Answers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf50e2f0-fc63-4734-a05e-b038049b20e1",
+   "id": "29c702c0-326f-40d9-824c-d009fae37e50",
    "metadata": {},
    "outputs": [],
    "source": []
