--- a/ebook/outline.ipynb
+++ b/ebook/outline.ipynb
@@ -46,12 +46,12 @@
     "* LM Bench\n",
     "* **Read**: https://siboehm.com/articles/22/Fast-MMM-on-CPU\n",
     "\n",
-    "#### [Cilk](06_fork_join.ipynb)  (Sep. 15)\n",
+    "#### [Cilk](06_fork_join.ipynb)  (Sep. 18)\n",
     "* fork/join parallelism\n",
     "* loop parallelism\n",
     "* work stealing and scheduling\n",
     "\n",
-    "#### [Loop Parallelism](07_openmp_loops.ipynb)\n",
+    "#### [Loop Parallelism](07_openmp_loops.ipynb) (Sep. 20)\n",
     "\n",
     "* Scoping and thread local variables\n",
     "* Loop dependencies\n",
@@ -60,7 +60,7 @@
     "* False sharing\n",
     "* Reductions in OpenMP\n",
     "    \n",
-    "#### [Factors Against Parallelism](08_factors.ipynb) (Sep 18)\n",
+    "#### [Factors Against Parallelism](08_factors.ipynb) (Sep. 25)\n",
     "* Interference\n",
     "* Skew\n",
     "* Startup costs\n",
